adjust layout issue

--- a/styles/home.css
+++ b/styles/home.css
@@ -27,6 +27,7 @@ body, html {
   z-index: 10;
   color: white;
   background-color: #000; /* Optional: prevent transparency when fixed */
+  height: 90px;
 }
 
 
@@ -80,7 +81,7 @@ body, html {
 }
 
 .logo-img {
-  height: 50px;
+  height: 80px;
   
 }
 
